# asimov-apple-module

./: CHANGES.md  Cargo.toml  README.md
.github/workflows/: ci.yaml.yml  release.yaml
src/: main.rs
src/emitter/: notes.rs
src/speaker/: main.rs
